--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,21 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>jopenpec</name>
 	<packaging>jar</packaging>
-	<scm>
-		<connection>scm:svn:http://jopenpec.googlecode.com/svn/trunk/</connection>
-		<developerConnection>scm:svn:https://jopenpec.googlecode.com/svn/trunk/</developerConnection>
-	</scm>
+	
 	<distributionManagement>
 		<repository>
-			<id>java.net-m2-repository</id>
-			<url>java-net:/maven2-repository/trunk/repository/</url>
+			<id>deployment</id>
+			<name>Ipublic</name>
+			<url>http://git.ipublic.it:8081/nexus/content/repositories/ipublic/releases/</url>
 		</repository>
+		<snapshotRepository>
+			<id>deployment</id>
+			<name>Ipublic</name>
+			<url>http://git.ipublic.it:8081/nexus/content/repositories/ipublic/snapshots/</url>
+		</snapshotRepository>
 	</distributionManagement>
+	
+	
 	<dependencies>
 		<dependency>
 			<groupId>javax.mail</groupId>
@@ -79,9 +84,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<buildOutputDirectory>bin</buildOutputDirectory>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 					<optimize>true</optimize>
 				</configuration>
 			</plugin>
