--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,18 @@
 			<version>1.3.3</version>
 		</dependency>
 
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
 			<version>1.7.7</version>
 		</dependency>
+ -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.2</version>
 
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
